--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,16 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   background-color: black;
   width: 100vw;
   min-height: 100vh;
-  /* display: grid;
-  place-items: center; */
-  /* display: flex;
- flex-direction: column; */
 }
-#toggle{
-    background-color: white;
-    color: black;
+#toggle {
+  background-color: white;
+  color: black;
 }
